Implementación de Login funcional con arquitectura MVC y conexión a MySQL
Lógica del Controlador: He creado LoginController.java vinculando la interfaz mediante initialize() y setOnAction.

Seguridad y Persistencia: Implemento validación de credenciales con la base de datos biblioteca_dam usando PreparedStatement para mayor seguridad.

Interfaz y UX: Configurada la vista LoginView.fxml con gestión de errores mediante ventanas emergentes (Alert).

Configuración del Entorno: He integrado el conector JDBC de MySQL y configuradas las VM Options para el despliegue del SDK de JavaFX.

Documentación: Actualizado el archivo README.md con el estado actual del proyecto. Y añadido al .txt los autores, libros y usuario. previamente añadido en PHP.